Fixed - QuickSelect's modal is not hidden behind DirectoryHeader

--- a/src/renderer/styles/panels/DirectoryHeader.scss
+++ b/src/renderer/styles/panels/DirectoryHeader.scss
@@ -3,6 +3,6 @@
     font-style: italic;
     font-weight: lighter;
     padding: 0.3em 0 0.3em 16px;
-    z-index: 1000;
+    z-index: 100;
     margin-bottom: 0.3em;
 }
